--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+__pycache__/*
 /bin/
 /env/
 /obj/
@@ -6,3 +7,4 @@ MicroBlog.pyproj.user
 ptvs_virtualenv_proxy.py
 web.config
 web.debug.config
+.gitignore
